New in ????.??.??:
	+ voidlinux:
		+ meta:
			+ filename: voidlinux-????.??.??-x86_64.iso
			+ filesize: ????MB
			+ sha256sum: ????????????????????????????????????????????????????????????????
		+ includes:
			+ voidfiles @ ????????????????????????????????????????
			+ voidvault @ ????????????????????????????????????????
			+ voidpkgs  @ ????????????????????????????????????????
		+ packages:
			+ android-tools
			+ android-udev-rules
			+ arch-wiki-lite
			+ bash-completion
			+ busybox-huge
			+ cpanminus
			+ cryfs
			+ device-mapper
			+ exfat-utils
			+ exiftool
			+ glow
			+ i2pd
			+ jo
			+ libmbim
			+ mercurial
			+ nethogs
			+ nvme-cli
			+ oath-toolkit
			+ openvpn
			+ p7zip
			+ ppp
			+ pppconfig
			+ qrcp
			+ usb-modeswitch
			+ vnstat
			+ wvdial
			- gnupg1
			- jless
			- neovim
		+ notes:
			+ cmdline: ./mkvoidiso.sh --with-custom-packages

New in 2022.03.07:
	+ voidlinux:
		+ meta:
			+ filename: voidlinux-2022.03.07-x86_64.iso
			+ filesize: 1010MB
			+ sha256sum: 5047dff83f2f12c4fbdf6d2a08a667d65aa30a3abe4146d0dc44770555aedb2f
		+ includes:
			+ voidfiles @ 72edc647b49c4197da7d43c5c6183c155ba13531
			+ voidvault @ 7915d87e2a7e2e03849ff67332ad62238f36eb98
			+ voidpkgs  @ 17412f5944ed2994fd482318687e01486b75371a
		+ packages:
			+ aerc
			+ age
			+ aircrack-ng
			+ bandwhich
			+ bc
			+ bettercap
			+ borg
			+ catgirl
			+ chrony
			+ coWPAtty
			+ create_ap
			+ diskonaut
			+ dnsmasq
			+ fake-hwclock
			+ faketime
			+ firejail
			+ gnupg1
			+ hashcat
			+ hashcat-utils
			+ hdparm
			+ hostapd
			+ intel-ucode
			+ jless
			+ john
			+ libgfshare
			+ libgfshare-tools
			+ lua51
			+ lua53
			+ lua54
			+ luarocks-lua51
			+ luarocks-lua53
			+ luarocks-lua54
			+ moreutils
			+ neovim
			+ nwipe
			+ obfs4proxy
			+ orjail
			+ outils
			+ pinentry-tty
			+ procs
			+ pv
			+ python3
			+ scapy
			+ sftpgo
			+ so
			+ sqlite
			+ sss-cli
			+ stegsnow
			+ tealdeer
			+ unbound
			+ units
			+ unzip
			+ void-release-keys