@@ -5,9 +5,11 @@ New in ????.??.??:
 			+ filesize: ????MB
 			+ sha256sum: ????????????????????????????????????????????????????????????????
 		+ includes:
+			+ void-docs @ ????????????????????????????????????????
 			+ voidfiles @ ????????????????????????????????????????
-			+ voidvault @ ????????????????????????????????????????
+			+ voidiso @ ????????????????????????????????????????
 			+ voidpkgs  @ ????????????????????????????????????????
+			+ voidvault @ ????????????????????????????????????????
 		+ packages:
 			+ android-tools
 			+ android-udev-rules
